# NAS-Docker

./: .gitignore  docker-compose.yml
adguardhome/: docker-compose.yml
custom-docker/jellyfin-webhooks/: Dockerfile  pyproject.toml  requirements.txt
custom-docker/jellyfin-webhooks/frontend/: App.tsx  index.css  index.html  package.json  tsconfig.json  types.ts  vite.config.ts
custom-docker/jellyfin-webhooks/frontend/components/: DevLogTable.tsx  DryRunModal.tsx  LogTable.tsx  NetworkView.tsx  WebhooksTable.tsx
custom-docker/jellyfin-webhooks/jellyfin_webhooks/: main.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/logs/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/requests/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/run/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/torrents/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/api/webhooks/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/components/: movie.py  series.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/utils/: constants.py  decorators.py  functions.py  request_logger.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/webhook/: __init__.py
custom-docker/jellyfin-webhooks/jellyfin_webhooks/webhook/add_watched_tag/: __init__.py
custom-docker/jellyfin-webhooks/src/: __init__.py
custom-docker/jellyfin-webhooks/src/utils/: constants.py
custom-docker/jellyfin-webhooks/src/watched_tag/: __init__.py
(+11 files in other folders)
